# molecular_electronics

./: README.md
HuckelCode/: HuckelCode.ipynb  HuckelCode.py
HuckelCode/huckelcode/: 1bna.yah  2lzz.yah  CMakeLists.txt  COOP_stuff.cpp  DOS_stuff.cpp  FMO_stuff.cpp  K_hamil.cpp  K_overlap_mat.cpp  Makefile  R_hamil.cpp  R_overlap_mat.cpp  Titin-unfolded-monomer.yah  Zmat.cpp  avg_props.cpp  bands.cpp  bind.h  cboris.f  charge_mat.cpp  chg_it.cpp  diag.f  distance_mat.cpp  eht_parms.h  electrostat.cpp  fileio.cpp  genutil.cpp  globals.cpp  kpoints.cpp  main.cpp  matrices.cpp  memory.cpp  mod_mulliken.cpp  mov.cpp  muller.cpp  mulliken.cpp  netCDF_support.cpp  new3_fileio.cpp  postprocess.cpp  princ_axes.cpp  prototypes.h  recip_space.cpp  (+7 more)
HuckelCode/huckelcode/f2c_files/: abfns.cpp  cboris.cpp  d_sign.cpp  diag.cpp  diag_old.cpp  f2c.h  lovlap.cpp  pow_di.cpp  pow_ii.cpp
HuckelCode/huckelcode/output/: MatrixMarketWriter.cpp  MatrixMarketWriter.h
HuckelCode/huckelcode/tests/: CMakeLists.txt  TestMatrixMarketWriter.cpp  TestMatrixMarketWriter.h  main.cpp
HuckelCode/input/: CMakeLists.txt  ErrorHandler.cpp  ErrorHandler.h  Makefile  OpenBabelUtils.cpp  OpenBabelUtils.h  PDBParser.cpp  PDBParser.h  SettingsParser.cpp  SettingsParser.h  Titin-folded-monomer.sdf  config.txt  main.cpp
HuckelCode/input/include/ESBTL/: Doxyfile  PDB.h  line_reader.h  line_selectors.h
HuckelCode/input/include/openbabel/: CMakeLists.txt
HuckelCode/input/include/openbabel/src/: cpp.text
HuckelCode/input/tests/: CMakeLists.txt  Makefile  TestOpenBabelUtils.cpp  TestOpenBabelUtils.h  TestPdbParser.cpp  TestPdbParser.h  TestSettingsParser.cpp  TestSettingsParser.h  main.cpp
Scripts/: fujita-polyglicingen.py  readeig.py  readwfsx.py  siesta2xyz.py  xsf2cube.py  xyz2reax.py  xyz2siesta.py  xyz2yaeh.py
Special_scripts/: LeadMolLead.py  LeadchainLead.py  RelaxMol.py
Utils/: DREI_PARAM  Dreiding_forcefield.py  Equus_inpgen_v1.1.py  Glycine.py  Gollum_fortran_inpgen_v1.py  Gollum_inpgen_v1.py  HS_util.py  Stretch_Mol.py  Stretch_mol_with_Siesta.py  randglycine.py  siesta_utils.py
Yaehmopy/: Yaehmop.py
ase_ext/ase_ext/: __init__.py  all.py  atom.py  atoms.py  infrared.py  neb.py  old.py  parallel.py  structure.py  svnversion.py  svnversion_io.py  thermochemistry.py  version.py  vibrations.py  xrdebye.py
ase_ext/ase_ext/calculators/: __init__.py  abinit.py  aims.py  dacapo.py  dftb.py  elk.py  emt.py  exciting.py  fleur.py  siesta.py  test.py  tip3p.py  turbomole.py  vasp.py
ase_ext/ase_ext/calculators/jacapo/: __init__.py  changed.py  jacapo.py  mayavis.py  setup.py  validate.py
ase_ext/ase_ext/data/: molecules.py
ase_ext/ase_ext/dft/: __init__.py  kpoints.py  stm.py  wannier.py
ase_ext/ase_ext/examples/: Al100.py  COCu111.py  Pt_island.py  neb1.py  plot-ase-atoms.py  stm.py
ase_ext/ase_ext/gui/: ag.py  bulk_modulus.py  calculator.py  constraints.py  debug.py  dft.py  energyforces.py  execute.py  graphene.py  graphs.py  gtkexcepthook.py  gui.py  images.py  minimize.py  movie.py  nanoparticle.py  nanotube.py  neb.py  progress.py  pybutton.py  repeat.py  rotate.py  scaling.py  settings.py  setupwindow.py  simulation.py  status.py  surfaceslab.py  view.py  widgets.py
ase_ext/ase_ext/gui/languages/: __init__.py  da.py
ase_ext/ase_ext/io/: __init__.py  aims.py  ascii.py  bader.py  cfg.py  cif.py  cmdft.py  cube.py  dacapo.py  dftb.py  eps.py  exciting.py  gpawtext.py  iwm.py  mol.py  mol2.py  netcdf.py  pdb.py  plt.py  png.py  pov.py  pupynere.py  py.py  quipxyz.py  sdf.py  trajectory.py  turbomole.py  vasp.py  vnl.py  vtkxml.py  wien2k.py  xsf.py  xyz.py
ase_ext/ase_ext/lattice/: bravais.py  compounds.py  cubic.py  hexagonal.py  monoclinic.py  orthorhombic.py  surface.py  tetragonal.py  triclinic.py
ase_ext/ase_ext/lattice/spacegroup/: cell.py  crystal.py  spacegroup.py
ase_ext/ase_ext/md/: __init__.py  langevin.py  logger.py  md.py  npt.py  nptberendsen.py  nvtberendsen.py  verlet.py
ase_ext/ase_ext/optimize/: __init__.py  basin.py  bfgs.py  bfgslinesearch.py  fire.py  fmin_bfgs.py  lbfgs.py  mdmin.py  oldqn.py  optimize.py  sciopt.py
ase_ext/ase_ext/optimize/test/: C2_Cu100.py  C5H12.py  CO_Au111.py  Cu_bulk.py  H2.py  N2Cu_relax.py  __init__.py  generate_rst.py  nanoparticle.py  neb.py  test.py
ase_ext/ase_ext/test/: Ag-Cu100.py  CO2_Au111.py  COCu111.py  COCu111_2.py  __init__.py  atom.py  bader.py  basin.py  build.py  center.py  coverage.py  crystal.py  dimer.py  distmom.py  emt.py  emt1.py  example.py  exciting.py  geometry.py  h2.py  hcp.py  io.py  jacapo.py  magmom.py  maxwellboltzmann.py  md.py  n2.py  neb.py  neighbor.py  netcdf.py  properties.py  pull.py  replay.py  rotate.py  rotate_euler.py  scaled_positions.py  stm.py  strain.py  things.py  trajectory.py  (+8 more)
ase_ext/ase_ext/transport/: calculators.py  stm.py  stm_test.py  test_transport_calulator.py  tools.py
ase_ext/ase_ext/utils/: __init__.py  adsorb.py  deprecate.py  eos.py  geometry.py  linesearch.py  memory.py  molecule_test.py
ase_ext/ase_ext/visualize/: __init__.py  fieldplotter.py  primiplotter.py
ase_ext/ase_ext/visualize/vtk/: __init__.py  atoms.py  cell.py  grid.py  module.py  pipeline.py  sources.py  volume.py
