cmake_minimum_required(VERSION 3.6)
project(openbabel)

set(CMAKE_CXX_STANDARD 11)

set(SOURCE_FILES
    depict/asciipainter.h
    depict/cairopainter.h
    depict/commandpainter.h
    depict/depict.h
    depict/painter.h
    depict/svgpainter.h
    json/customwriter.h
    json/json-forwards.h
    json/json.h
    math/align.h
    math/erf.h
    math/matrix3x3.h
    math/spacegroup.h
    math/transform3d.h
    math/vector3.h
    src/charges/eem.cpp
    src/charges/eqeq.cpp
    src/charges/eqeq.h
    src/charges/fromfile.cpp
    src/charges/gasteiger.cpp
    src/charges/mmff94.cpp
    src/charges/none.cpp
    src/charges/qeq.cpp
    src/charges/qeq.h
    src/charges/qtpie.cpp
    src/charges/qtpie.h
    src/depict/asciipainter.cpp
    src/depict/cairopainter.cpp
    src/depict/commandpainter.cpp
    src/depict/depict.cpp
    src/depict/svgpainter.cpp
    src/descriptors/cansmidescriptor.cpp
    src/descriptors/cmpdfilter.cpp
    src/descriptors/filters.cpp
    src/descriptors/groupcontrib.cpp
    src/descriptors/inchidescriptor.cpp
    src/descriptors/smartsdescriptors.cpp
    src/fingerprints/finger2.cpp
    src/fingerprints/finger3.cpp
    src/fingerprints/fingerecfp.cpp
    src/forcefields/forcefieldgaff.cpp
    src/forcefields/forcefieldgaff.h
    src/forcefields/forcefieldghemical.cpp
    src/forcefields/forcefieldghemical.h
    src/forcefields/forcefieldmm2.cpp
    src/forcefields/forcefieldmm2.h
    src/forcefields/forcefieldmmff94.cpp
    src/forcefields/forcefieldmmff94.h
    src/forcefields/forcefielduff.cpp
    src/forcefields/forcefielduff.h
    src/formats/json/chemdoodlejsonformat.cpp
    src/formats/json/customwriter.cpp
    src/formats/json/jsoncpp.cpp
    src/formats/json/pubchemjsonformat.cpp
    src/formats/libinchi/ichi_bns.c
    src/formats/libinchi/ichi_io.c
    src/formats/libinchi/ichican2.c
    src/formats/libinchi/ichicano.c
    src/formats/libinchi/ichicans.c
    src/formats/libinchi/ichiisot.c
    src/formats/libinchi/ichilnct.c
    src/formats/libinchi/ichimak2.c
    src/formats/libinchi/ichimake.c
    src/formats/libinchi/ichimap1.c
    src/formats/libinchi/ichimap2.c
    src/formats/libinchi/ichimap4.c
    src/formats/libinchi/ichinorm.c
    src/formats/libinchi/ichiparm.c
    src/formats/libinchi/ichiprt1.c
    src/formats/libinchi/ichiprt2.c
    src/formats/libinchi/ichiprt3.c
    src/formats/libinchi/ichiqueu.c
    src/formats/libinchi/ichiread.c
    src/formats/libinchi/ichiring.c
    src/formats/libinchi/ichirvr1.c
    src/formats/libinchi/ichirvr2.c
    src/formats/libinchi/ichirvr3.c
    src/formats/libinchi/ichirvr4.c
    src/formats/libinchi/ichirvr5.c
    src/formats/libinchi/ichirvr6.c
    src/formats/libinchi/ichirvr7.c
    src/formats/libinchi/ichisort.c
    src/formats/libinchi/ichister.c
    src/formats/libinchi/ichitaut.c
    src/formats/libinchi/ikey_base26.c
    src/formats/libinchi/ikey_dll.c
    src/formats/libinchi/inchi_dll.c
    src/formats/libinchi/inchi_dll_a.c
    src/formats/libinchi/inchi_dll_a2.c
    src/formats/libinchi/inchi_dll_main.c
    src/formats/libinchi/runichi.c
    src/formats/libinchi/sha2.c
    src/formats/libinchi/strutil.c
    src/formats/libinchi/util.c
    src/formats/xml/cdxmlformat.cpp
    src/formats/xml/cmlformat.cpp
    src/formats/xml/cmlreactformat.cpp
    src/formats/xml/iconv.h
    src/formats/xml/pubchem.cpp
    src/formats/xml/xml.cpp
    src/formats/xml/xmlformat.cpp
    src/formats/abinitformat.cpp
    src/formats/acesformat.cpp
    src/formats/acrformat.cpp
    src/formats/adfformat.cpp
    src/formats/alchemyformat.cpp
    src/formats/amberformat.cpp
    src/formats/aoforceformat.cpp
    src/formats/APIInterface.cpp
    src/formats/ArrayList.c
    src/formats/ArrayList.h
    src/formats/asciiformat.cpp
    src/formats/balstformat.cpp
    src/formats/bgfformat.cpp
    src/formats/boxformat.cpp
    src/formats/cacaoformat.cpp
    src/formats/cacheformat.cpp
    src/formats/carformat.cpp
    src/formats/castepformat.cpp
    src/formats/cccformat.cpp
    src/formats/chem3dformat.cpp
    src/formats/chemdrawcdx.cpp
    src/formats/chemdrawct.cpp
    src/formats/chemkinformat.cpp
    src/formats/chemtoolformat.cpp
    src/formats/cifformat.cpp
    src/formats/confabreport.cpp
    src/formats/copyformat.cpp
    src/formats/crkformat.cpp
    src/formats/crystal09format.cpp
    src/formats/CSRformat.cpp
    src/formats/cssrformat.cpp
    src/formats/daltonformat.cpp
    src/formats/dlpolyformat.cpp
    src/formats/dmolformat.cpp
    src/formats/exampleformat.cpp
    src/formats/exyzformat.cpp
    src/formats/fastaformat.cpp
    src/formats/fastsearchformat.cpp
    src/formats/fchkformat.cpp
    src/formats/featformat.cpp
    src/formats/fhformat.cpp
    src/formats/fhiaimsformat.cpp
    src/formats/fingerprintformat.cpp
    src/formats/fpsformat.cpp
    src/formats/freefracformat.cpp
    src/formats/gamessformat.cpp
    src/formats/gamessukformat.cpp
    src/formats/gausscubeformat.cpp
    src/formats/gaussformat.cpp
    src/formats/gausszmatformat.cpp
    src/formats/genbankformat.cpp
    src/formats/getinchi.cpp
    src/formats/ghemicalformat.cpp
    src/formats/groformat.cpp
    src/formats/gromos96format.cpp
    src/formats/gulpformat.cpp
    src/formats/hinformat.cpp
    src/formats/inchiformat.cpp
    src/formats/jaguarformat.cpp
    src/formats/lmpdatformat.cpp
    src/formats/lpmdformat.cpp
    src/formats/MCDLformat.cpp
    src/formats/mdffformat.cpp
    src/formats/mdlformat.cpp
    src/formats/mdlvalence.h
    src/formats/mmcifformat.cpp
    src/formats/mmodformat.cpp
    src/formats/MNAformat.cpp
    src/formats/mol2format.cpp
    src/formats/moldenformat.cpp
    src/formats/molproformat.cpp
    src/formats/molreport.cpp
    src/formats/mopacformat.cpp
    src/formats/mpdformat.cpp
    src/formats/mpqcformat.cpp
    src/formats/msiformat.cpp
    src/formats/msmsformat.cpp
    src/formats/nulformat.cpp
    src/formats/nwchemformat.cpp
    src/formats/opendxformat.cpp
    src/formats/orcaformat.cpp
    src/formats/outformat.cpp
    src/formats/painterformat.cpp
    src/formats/pcmodelformat.cpp
    src/formats/pdbformat.cpp
    src/formats/pdbqtformat.cpp
    src/formats/png2format.cpp
    src/formats/pngformat.cpp
    src/formats/pointcloudformat.cpp
    src/formats/posformat.cpp
    src/formats/povrayformat.cpp
    src/formats/pqrformat.cpp
    src/formats/PQSformat.cpp
    src/formats/pwscfformat.cpp
    src/formats/qchemformat.cpp
    src/formats/reportformat.cpp
    src/formats/rsmiformat.cpp
    src/formats/rxnformat.cpp
    src/formats/shelxformat.cpp
    src/formats/siestaformat.cpp
    src/formats/smilesformat.cpp
    src/formats/smiley.h
    src/formats/smileyformat.cpp
    src/formats/stlformat.cpp
    src/formats/svgformat.cpp
    src/formats/textformat.cpp
    src/formats/thermoformat.cpp
    src/formats/tinkerformat.cpp
    src/formats/titleformat.cpp
    src/formats/turbomoleformat.cpp
    src/formats/unichemformat.cpp
    src/formats/vaspformat.cpp
    src/formats/viewmolformat.cpp
    src/formats/xedformat.cpp
    src/formats/xsfformat.cpp
    src/formats/xtcformat.cpp
    src/formats/xyzformat.cpp
    src/formats/yasaraformat.cpp
    src/formats/zindoformat.cpp
    src/GUI/OBGUI.cpp
    src/GUI/OBGUI.h
    src/GUI/optswx.cpp
    src/GUI/optswx.h
    src/GUI/selformats.h
    src/GUI/stdwx.cpp
    src/GUI/stdwx.h
    src/math/align.cpp
    src/math/matrix3x3.cpp
    src/math/spacegroup.cpp
    src/math/transform3d.cpp
    src/math/vector3.cpp
    src/ops/addfilename.cpp
    src/ops/addinindex.cpp
    src/ops/addnonpolarh.cpp
    src/ops/addpolarh.cpp
    src/ops/canonical.cpp
    src/ops/changecell.cpp
    src/ops/conformer.cpp
    src/ops/deferred.h
    src/ops/delnonpolarh.cpp
    src/ops/delpolarh.cpp
    src/ops/fillUC.cpp
    src/ops/forcefield.cpp
    src/ops/gen2D.cpp
    src/ops/gen3d.cpp
    src/ops/largest.cpp
    src/ops/loader.cpp
    src/ops/op2d.cpp
    src/ops/opalign.cpp
    src/ops/opconfab.cpp
    src/ops/ophighlight.cpp
    src/ops/opisomorph.cpp
    src/ops/opisomorph.h
    src/ops/opsplit.cpp
    src/ops/optransform.cpp
    src/ops/partialcharges.cpp
    src/ops/readconformers.cpp
    src/ops/sort.cpp
    src/ops/unique.cpp
    src/ops/xout.cpp
    src/stereo/cistrans.cpp
    src/stereo/facade.cpp
    src/stereo/perception.cpp
    src/stereo/squareplanar.cpp
    src/stereo/stereo.cpp
    src/stereo/stereoutil.h
    src/stereo/tetrahedral.cpp
    src/stereo/tetranonplanar.cpp
    src/stereo/tetraplanar.cpp
    src/alias.cpp
    src/atom.cpp
    src/base.cpp
    src/bitvec.cpp
    src/bond.cpp
    src/bondtyper.cpp
    src/builder.cpp
    src/canon.cpp
    src/chains.cpp
    src/chargemodel.cpp
    src/chiral.cpp
    src/conformersearch.cpp
    src/confsearch.cpp
    src/data.cpp
    src/data_utilities.cpp
    src/descriptor.cpp
    src/distgeom.cpp
    src/dlhandler_unix.cpp
    src/dlhandler_win32.cpp
    src/doxygen_pages.cpp
    src/fingerprint.cpp
    src/forcefield.cpp
    src/format.cpp
    src/generic.cpp
    src/graphsym.cpp
    src/grid.cpp
    src/griddata.cpp
    src/isomorphism.cpp
    src/kekulize.cpp
    src/locale.cpp
    src/matrix.cpp
    src/mcdlutil.cpp
    src/memcpy.c
    src/mol.cpp
    src/molchrg.cpp
    src/obconversion.cpp
    src/oberror.cpp
    src/obiter.cpp
    src/obmolecformat.cpp
    src/obutil.cpp
    src/op.cpp
    src/parsmart.cpp
    src/patty.cpp
    src/phmodel.cpp
    src/plugin.cpp
    src/pointgroup.cpp
    src/query.cpp
    src/rand.cpp
    src/RDKitConv.cpp
    src/residue.cpp
    src/ring.cpp
    src/rotamer.cpp
    src/rotor.cpp
    src/snprintf.c
    src/snprintf.h
    src/spectrophore.cpp
    src/strncasecmp.c
    src/tautomer.cpp
    src/tokenst.cpp
    src/transform.cpp
    src/typer.cpp
    src/zipstream.h
    src/zipstreamimpl.h
    stereo/bindings.h
    stereo/cistrans.h
    stereo/squareplanar.h
    stereo/stereo.h
    stereo/tetrahedral.h
    stereo/tetranonplanar.h
    stereo/tetraplanar.h
    tree/tree.hh
    tree/tree_util.hh
    alias.h
    atom.h
    atomclass.h
    babelconfig.h
    base.h
    bitvec.h
    bond.h
    bondtyper.h
    builder.h
    canon.h
    chains.h
    chargemodel.h
    chiral.h
    conformersearch.h
    data.h
    data_utilities.h
    descriptor.h
    distgeom.h
    dlhandler.h
    fingerprint.h
    forcefield.h
    format.h
    generic.h
    graphsym.h
    grid.h
    griddata.h
    groupcontrib.h
    inchiformat.h
    internalcoord.h
    isomorphism.h
    kinetics.h
    lineend.h
    locale.h
    matrix.h
    mcdlutil.h
    mol.h
    molchrg.h
    obconversion.h
    oberror.h
    obiter.h
    obmolecformat.h
    obutil.h
    op.h
    optransform.h
    parsmart.h
    patty.h
    phmodel.h
    plugin.h
    pointgroup.h
    query.h
    rand.h
    reaction.h
    residue.h
    ring.h
    rotamer.h
    rotor.h
    shared_ptr.h
    spectrophore.h
    tautomer.h
    text.h
    tokenst.h
    typer.h
    xml.h)

add_executable(openbabel ${SOURCE_FILES})